<?xml version="1.0"?>
<package format="3">
  <name>qpSWIFT</name>
  <version>1.0</version>
  <description>todo</description>
  <maintainer email="957278968@qq.com">HuningHe</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/HuNingHe/qpSWIFT</url>

  <!-- The following tag is recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  
  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
